--- a/US_VS_China_Trade_War.ipynb
+++ b/US_VS_China_Trade_War.ipynb
@@ -2324,12 +2324,15 @@
         "    def quote_flair_score(sentence):\n",
         "        flair_sentence = Sentence(sentence)\n",
         "        classifier.predict(flair_sentence)\n",
-        "        return flair_sentence.labels[0].score\n",
+        "        if flair_sentence.labels[0].value == 'POSITIVE':\n",
+        "            return flair_sentence.labels[0].score\n",
+        "        else:\n",
+        "            return - flair_sentence.labels[0].score\n",
         "\n",
         "    df['flair_pred'] = df.quotation.apply(lambda quote: quote_flair_score(quote))\n",
         "    return None"
       ],
-      "execution_count": null,
+      "execution_count": 100,
       "outputs": []
     },
     {
